<resources>
    <string name="app_name">GastoViajem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="pre_o">Preço</string>
    <string name="pre_o_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMS por litro</string>
    <string name="seu_gasto_total_sera_de">SEU GASTO TOTAL SERA DE:</string>
    <string name="calcular">Calcular</string>
    <string name="validacao_todos_os_campos">Preencha todos os campos corretamente</string>
</resources>